added view and controller view

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
   database:
     image: mariadb:10.4
     volumes:
-      - /database/db.sql:/var/lib/mysql
+      - dbdata:/var/lib/mysql
     environment:
       - "MYSQL_DATABASE=cookies_db"
       - "MYSQL_USER=cookie_monster"
@@ -22,3 +22,6 @@ services:
       - "MYSQL_ROOT_PASSWORD=secret"
     ports:
       - "3307:3306"
+
+volumes:
+  dbdata:
